<resources>
    <string name="app_name">Ala Eh Batangas</string>
    <string name="drawer_state_key">drawerState</string>
    <string name="fragment_state_key">fragmentState</string>
    <string name="home_tag">HOME_TAG</string>
    <string name="nature_tag">NATURE_TAG</string>
    <string name="landmark_tag">LANDMARK_TAG</string>
    <string name="museum_tag">MUSEUM_TAG</string>
    <string name="cuisine_tag">CUISINE_TAG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="test_paragraph"><![CDATA[A beach with crystal clear water, white sand and beautiful corals. Masasa beach offers affordable accommodations, and lots of activities you can enjoy like swimming and snorkeling. They offer use of vest and goggles for those who want to see the beauty under the sea. You can also hike to Mag-asawang Bato if you want to see the whole shore of the beach. In addition to that, they have also a long shore where you can do camping and star gazing at night.]]></string>
    <string name="batangas">Batangas</string>
    <string name="philippines">Philippines</string>
    <string name="home">Home</string>
    <string name="natures">Natures</string>
    <string name="landmarks">Landmarks</string>
    <string name="museums">Museums</string>
    <string name="cuisines">Cuisines</string>
    <string name="beaches">Beaches</string>
    <string name="mountains">Mountains</string>
    <string name="islands">Islands</string>
    <string name="churches">Churches</string>
    <string name="farms">Farms</string>
    <string name="lighthouses">Lighthouses</string>
    <string name="history">History</string>
    <string name="specialty">Specialty</string>
    <string name="art">Art</string>
    <string name="restaurants">Restaurants</string>
    <string name="foods">Foods</string>
    <string name="paragraph_01">
        <![CDATA[Batangas, officially known as the Province of Batangas (Filipino: Lalawigan ng Batangas) is a province in the Philippines located in the Calabarzon region in Luzon. Its capital is the city of Batangas and is bordered by the provinces of Cavite and Laguna to the north and Quezon to the east. Across the Verde Island Passages to the south is the island of Mindoro and to the west lies the South China Sea. Poetically, Batangas is often referred to by its ancient name Kumintáng.]]>
    </string>
    <string name="paragraph_02">
        <![CDATA[Batangas is one of the most popular tourist destinations near Metro Manila. It is home to the well-known Taal Volcano, one of the Decade Volcanoes, and Taal Heritage town, a small town that has ancestral houses and structures dating back to the 19th century. The province also has numerous beaches and diving spots including Anilao in Mabini, Sombrero Island in Tingloy, Ligpo Island and Sampaguita Beach in Bauan, Matabungkay in Lian, Punta Fuego in Nasugbu, Calatagan and Laiya in San Juan.]]>
    </string>
    <string name="paragraph_03">
        <![CDATA[Batangas City has the second largest international seaport in the Philippines after Metro Manila. The identification of the city as an industrial growth center in the region and being the focal point of the Calabarzon program is seen in the increasing number of business establishments in the city\\'s Central Business District (CBD) as well as numerous industries operating in the province\\'s industrial parks.]]>
    </string>
    <string-array name="galleria_taal">
        <item>Galleria Taal</item>
        <item>60 Calle M.Agoncillo, Taal</item>
        <item><![CDATA[Photographer\'s heaven. Filipino culture lover\'s stop. Galleria Taal is a humble museum of Taal, Batangas that will offer you the Tagalog\'s classic lifestyle house during the Spanish era and now houses to a lot of photographs/camera that shaped our culture today. Come and see this classic house with full of cultural treasures that helped to shape our culture today!]]></item>
    </string-array>
    <string-array name="masasa_beach">
        <item>Masasa Beach</item>
        <item>Tingloy Island, Batangas City</item>
        <item><![CDATA[A beach with crystal clear water, white sand and beautiful corals. Masasa beach offers affordable accommodations, and lots of activities you can enjoy like swimming and snorkeling. They offer use of vest and goggles for those who want to see the beauty under the sea. You can also hike to Mag-asawang Bato if you want to see the whole shore of the beach. In addition to that, they have also a long shore where you can do camping and star gazing at night.]]></item>
    </string-array>
    <string-array name="playa_laiya">
        <item>Playa Laiya</item>
        <item>Playa Laiya, San Juan</item>
        <item><![CDATA[An exclusive, members-only resort, Playa Laiya has a stunning and extensive beach front and pristine white sand. The resort also has several features and amenities including a clubhouse, a spacious pool deck, and the infinity pool that gives a great view of the sea.]]></item>
    </string-array>
    <string-array name="matabungkay_beach">
        <item>Matabungkay Beach</item>
        <item>Matabungkay, Batangas City</item>
        <item><![CDATA[It is known for its white sand beach which is reasonably accessible from Manila (about 120 kilometres (75 mi)). It was originally \'discovered\' to be a great weekend or daytrip destination in the early 1950s, allegedly by sun starved German residents of Manila. In fact the German Club had a cottage there then. It was soon a popular target for holiday lovers and permanent cottages (even deluxe beach houses) were built along the beach line (and some into the beach) in the early 1960s for rich Manila folk.]]></item>
    </string-array>
    <string-array name="burot_beach">
        <item>Burot Beach</item>
        <item>Barangay Burot, Calatagan</item>
        <item><![CDATA[If you want to go to a remote place where you can relax and pitch a tent and on a low budget, this place is ideal. However, don\'t expect waves where you can surf or chase. There are lots of sea weeds and starfishes everywhere and also sea urchins so be careful, but if you enjoy the shallow water and view of sunset, then go try this place. ]]></item>
    </string-array>
    <string-array name="natipunan_beach">
        <item>Natipunan Beach</item>
        <item>Barangay Natipunan, Nasugbu</item>
        <item><![CDATA[Entrance to this beach is free you only need to pay for the hut. Sand is gray and ordinary, but it is fine enough not to hurt your feet. Shower and toilets are also available for a fee. Sari-sari stores are accessible near the beach front where you can buy food. Bonfire to cook is also allowed in the beach area.]]></item>
    </string-array>
    <string-array name="caleruega_church">
        <item>Caleruega Church</item>
        <item>Brgy. Kaylaway, Nasugbu</item>
        <item><![CDATA[Calaruega is not merely a solemn place of prayer but a destination to unwind. The other side of the fountain is a long stretch of road for the Station of the Cross. It is filled with blooming flowers and the picnic grounds is located downhill where people can rest. There are different sights to see. Families will find peace in the man-made falls, koi ponds, and hanging bridge.]]></item>
    </string-array>
    <string-array name="mt_carmel_church">
        <item>Our Lady of Mt Carmel Church</item>
        <item>Barangay Carmel, Lipa City</item>
        <item><![CDATA[Popular pilgrimage site in honor of The Blessed Virgin Mary, Mediatrix of All Grace. She was believed to have appeared here before a young postulant in the 1940s and rose petals fell from heaven during the apparitions. The tomb of the postulant Sister Teresita Castillo, is just outside the chapel of the Virgin Mary and may be seen by visitors.]]></item>
    </string-array>
    <string-array name="san_sebastian_cathedral">
        <item>San Sebastian Cathedral</item>
        <item>P. Torres St, Lipa City</item>
        <item><![CDATA[The cathedral is located in a very busy area. Roads are narrow so expect moderate flow of traffic. There is ample parking within the church premises. The church has undergone several restorations. However, upon entry, you will be impressed by the painted ceiling and dome. The dome is stunning. You will also see a grand baroque designed organ reportedly to be the only one in Batangas and one of the 59 units in the country.]]></item>
    </string-array>
    <string-array name="chapel_on_the_hill">
        <item>Chapel on the Hill</item>
        <item>Don Bosco, Batangas City</item>
        <item><![CDATA[Ideal for a solemn and private, intimate wedding far from the madding crowd. It helps that the climate in Tagaytay is cool and being dressed in your best formal ensemble makes it very comfortable. It is ideal for a destination wedding.]]></item>
    </string-array>
    <string-array name="lady_of_casaysay">
        <item>Shrine of Our Lady Of Caysasay</item>
        <item>Barangay Laba, Taal</item>
        <item><![CDATA[While this church is not the nicest in the Philippines, it is fascinating from the historical side. The image dates from 1603 and has been venerated there ever since. The candle vendors can be a little annoying, but you just have to keep politely refusing. The orphanage next door was well worth visiting also, if only to see the kids.]]></item>
    </string-array>
    <string-array name="milea_bee_farm">
        <item>Milea Bee Farm</item>
        <item>Kurba Road, Lipa City</item>
        <item><![CDATA[Milea Orchard and Bee Farm is a real working farm. It\'s the perfect place to visit for the authentic farm experience. Aside from different types of bees, you\'ll also see many types of butterflies, flowers, plants, fruits, and insects. It\'s a very interesting place, perfect for people who want to see what it\'s like on a farm.]]></item>
    </string-array>
    <string-array name="house_honey_bee_farm">
        <item>Honey House Honey Bee Farm</item>
        <item>4 Leviste Hwy, Lipa City</item>
        <item><![CDATA[The experience is full of information about bees particularly their purpose and their impact not only in the production of honey but their impact to the food sustainability to mankind. A good amount of high quality bee products are sold in this place.]]></item>
    </string-array>
    <string-array name="moca_family_farm">
        <item>MoCa Family Farm</item>
        <item>108 Brgy. Castillo, Padre Garcia</item>
        <item><![CDATA[MoCA Family farm is a small scale family farm located in Padre Garcia, Batangas. MoCa Farm started when sisters Gigi and Mimi, together with their husbands, Bob & Ferdie, made the decision to purchase a one hectare property in 2005 that used to be a mango orchard.  It started as weekend place for the Morris and Castor family;  that\'s why they originally refer to it as MoCa Farm.]]></item>
    </string-array>
    <string-array name="humba">
        <item>Humba</item>
        <item>Batangas City</item>
        <item><![CDATA[Humba is a sweet pork dish that resembles the famous pork adobo in terms of appearance. This is popular in the southern parts of the Philippines and is considered as one of the delicacies of the region. Pork belly, pork hocks, and pork ham are the 3 most common pig parts used to make this delightful masterpiece.]]></item>
    </string-array>
</resources>