<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_modern_black_18dp"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_natures"
            android:icon="@drawable/ic_beach_black_18dp"
            android:title="@string/natures" />
        <item
            android:id="@+id/nav_landmarks"
            android:icon="@drawable/ic_church_black_18dp"
            android:title="@string/landmarks" />
        <item
            android:id="@+id/nav_museums"
            android:icon="@drawable/ic_history_black_18dp"
            android:title="@string/museums" />
        <item
            android:id="@+id/nav_cuisines"
            android:icon="@drawable/ic_food_fork_drink_black_18dp"
            android:title="@string/cuisines" />
    </group>

</menu>
