<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/HomeScrollViewStyle"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout style="@style/HomeLinearLayoutStyle">

        <ImageView style="@style/HomeImageStyle" />

        <TextView
            style="@style/HomeTextStyle"
            android:text="@string/paragraph_01" />

        <View style="@style/LineBreakStyle" />

        <TextView
            style="@style/HomeTextStyle"
            android:text="@string/paragraph_02" />

        <View style="@style/LineBreakStyle" />

        <TextView
            style="@style/HomeTextStyle"
            android:text="@string/paragraph_03" />

    </LinearLayout>

</ScrollView>